<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_in_welcome"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            style="@style/TextInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTIET"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            style="@style/TextInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/emailTil"
            app:layout_constraintStart_toStartOf="@+id/emailTil"
            app:layout_constraintTop_toBottomOf="@+id/emailTil"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_500">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTIET"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:padding="14dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/passwordTil"
            app:layout_constraintStart_toStartOf="@+id/passwordTil"
            app:layout_constraintTop_toBottomOf="@+id/passwordTil" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#1D2151"
            android:background="?attr/selectableItemBackground"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:background="?attr/selectableItemBackground"
            android:text="Забили пароль?"
            android:textColor="#1D2151"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/signUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>